--- a/WebApplicationHotel/WebApplicationHotel.csproj
+++ b/WebApplicationHotel/WebApplicationHotel.csproj
@@ -214,6 +214,9 @@
     <Content Include="Views\Home\Booking.cshtml" />
     <Content Include="Views\Home\BookingDetails.cshtml" />
     <Content Include="Views\Booking\Index.cshtml" />
+    <Content Include="Views\Booking\Booking.cshtml" />
+    <Content Include="Views\Booking\BookingDetails.cshtml" />
+    <Content Include="Views\Booking\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
