--- a/DataLibrary/packages.config
+++ b/DataLibrary/packages.config
@@ -1,9 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.0.123" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Identity.Core" version="1.2.7" targetFramework="net472" />
   <package id="jQuery" version="2.0.0" targetFramework="net472" />
   <package id="jQuery.UI.Combined" version="1.13.1" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Cryptography.KeyDerivation" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
+  <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="6.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="6.0.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
